--- a/architecture/index.html
+++ b/architecture/index.html
@@ -95,7 +95,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project/" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="active head-right-1550 box">
@@ -115,7 +115,7 @@
   <!--head-->
   <!--body-->
 
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="blank-lineheight-xl"></div>
 
     <div class="body-landing">
@@ -356,7 +356,7 @@
   <div class="blank-lineheight-xl"></div>
 
   <!--back to top-->
-  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+  <button id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
 
     <div id="btnFont">TOP</div>
