--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -114,12 +114,9 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <div class="marginAll">
+
+    <div class="blank-lineheight-xl"></div>
 
     <!--diagram 1-->
     <div class="body-h">
@@ -149,7 +146,7 @@
 
     <!--diagram 2-->
     <div class="body-h">
-      <div class="body-right  body-txt">
+      <div class="body-right  body-txt marginAll">
         <p class="t-title-l">PROGRAMS</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Three categories of programs. Social and Leisure, Library, and
@@ -206,7 +203,7 @@
       </div>
     </div>
     <!--Plan-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--Plan site-->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -222,9 +219,8 @@
 
     </div>
     <!--Plan site-->
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
 
 
 
@@ -240,7 +236,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
