--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -114,17 +114,14 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <div class="marginAll">
+    <div class="blank-lineheight-xl"></div>
+
 
     <!--diagram 1-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="diagram.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram.jpg" alt="DIAGRAM" class="image float">
       </div>
 
       <div class="body-right body-txt">
@@ -149,10 +146,10 @@
     <!--diagram 1-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="programs.jpg" alt="DIAGRAM" class="image">
+        <img src="programs.jpg" alt="DIAGRAM" class="image float">
       </div>
 
-      <div class="body-right body-txt">
+      <div class="body-right body-txt marginAll">
         <p class="t-title-l">PRIVATE VS. PUBLIC</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">insert two volumes into one space two distinguish two main programs.
@@ -161,10 +158,10 @@
 
     </div>
     <!--diagram 1-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--diagram 2-->
     <div class="body-h">
-      <div class="body-right  body-txt">
+      <div class="body-right  body-txt marginAll">
         <p class="t-title-l">EXERCISE VS. LEISURE</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">the circulation integrates the two volumes as one space. it creates a
@@ -175,7 +172,7 @@
       </div>
     </div>
     <!--diagram 2-->
-    <br>
+    <div class="blank-lineheight-l"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -185,7 +182,7 @@
     <!-- content-->
     <!--environmental diagram-->
     <div class="body-h">
-      <div class="body-right  body-txt">
+      <div class="body-right  body-txt marginAll">
         <p class="t-title-l">THE MANIPULATION OF TWO VOLUMES</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Void vs. Solid</p>
@@ -197,7 +194,7 @@
     <!--environmental diagram-->
     <!--environmental diagram-->
     <div class="body-h">
-      <div class="body-right  body-txt">
+      <div class="body-right  body-txt marginAll">
         <p class="t-title-l">LIGHT AND AIR</p>
         <p class="horizontal-line"></p>
 
@@ -213,7 +210,7 @@
     <!--environmental diagram-->
     <!--environmental diagram-->
     <div class="body-h">
-      <div class="body-right  body-txt">
+      <div class="body-right  body-txt marginAll">
         <p class="t-title-l">FACADE DESGIN</p>
         <p class="horizontal-line"></p>
 
@@ -225,22 +222,26 @@
       </div>
     </div>
     <!--environmental diagram-->
-    <br>
+
+    <div class="blank-lineheight-xl"></div>
+
 
     <!--Section Perspective -->
     <div class="body-h">
-      <div class="body-left body-img float">
-          <img src="section_perspective.jpg" alt="DIAGRAM" class="image">
+      <div class="body-left">
+          <img src="section_perspective.jpg" alt="DIAGRAM" class="float">
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="body-right body-txt width-m">
         <P class="t-title-l">SECTION PERSPECTIVE</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">F1-5 with Facade Detail</p>
       </div>
     </div>
     <!--Section Perspective -->
+    <div class="blank-lineheight-xl"></div>
+
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl"> Renders </p>
@@ -258,15 +259,15 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="body-left float">
           <img src="render_int1.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--renders 2-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--renders 3-->
     <div class="body-h">
-      <div class="body-left body-img float">
+      <div class="body-left float">
           <img src="render_int2.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
@@ -279,7 +280,7 @@
 
     </div>
     <!--renders 3-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--renders 2-->
     <div class="body-h">
@@ -291,7 +292,7 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="body-left float">
           <img src="render_streetview.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
@@ -314,12 +315,12 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="body-left  float">
         <img src="plan_f1.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--plans and sections 1-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -329,12 +330,12 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="body-left  float">
         <img src="plan_f3.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--plans and sections 2-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -344,16 +345,16 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="body-left float">
         <img src="plan_f5.jpg" alt="plans and sections" class="image">
       </div>
     </div>
     <!--plans and sections 3-->
 
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
     <div class="body-h">
-      <div class="body-left body-img float">
+      <div class="body-left  float">
           <img src="sections_l.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
@@ -365,10 +366,10 @@
       </div>
     </div>
     <!--plans and sections 2-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
     <div class="body-h">
-      <div class="body-left body-img float">
+      <div class="body-left float">
           <img src="section_1.jpg" alt="DIAGRAM" class="image">
           <img src="section_2.jpg" alt="DIAGRAM" class="image">
       </div>
@@ -401,7 +402,7 @@
       </div>
     </div>
     <!--site-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -416,7 +417,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
