--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="blank-lineheight-xl"></div>
     <div class="body-landing">
       <div class="body-intro">
@@ -834,7 +834,7 @@
   </div>
 
   <!-- about me-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="t-title-m body-v">
       <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
         class="text-about-resume"> Download My Resume
@@ -844,7 +844,7 @@
   <div class="blank-lineheight-m"></div>
 
 
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="about-me">
       <div class="body-v">
         <div class="body-left t-title-l" data-aos="fade-up">
