--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -144,7 +144,7 @@
 
 
   <!-- content-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="content-tl adding-margintop">
       <p class="t-text-l"> Initial Concepts </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
@@ -214,7 +214,7 @@
   </div>
 
   <!-- content-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="content-tl">
       <p class="t-text-l"> Final Design </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
@@ -285,7 +285,7 @@
 
 
   <!-- content-->
-  <div class="margin-all">
+  <div class="marginAll">
 
     <div class="content-tl">
       <p class="t-text-l"> Case Study</p>
@@ -391,7 +391,7 @@
   <br>
 
   <!-- 01 -->
-  <div class="margin-all">
+  <div class="marginAll">
     <P class="text-project-numbers color-gh">01</P>
     <div class="row-change center-v">
       <div class="column">
@@ -1057,7 +1057,7 @@
   <!-- 01 -->
 
   <!-- 02 -->
-  <div class="margin-all">
+  <div class="marginAll">
     <P class="text-project-numbers color-gh">02</P>
     <div class="row-change center-v">
       <div class="column">
@@ -1134,7 +1134,7 @@
   </div>
 
   <div class="blank-lineheight-l"></div>
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="row-change center-v">
       <div class="column">
         <P class="t-title-m">Key Findings from the Contextual Inquiries </P>
@@ -1276,7 +1276,7 @@
   <!-- 03 IDEATION -->
 
   <P class="text-project-numbers color-gh">03</P>
-  <div class="margin-all">
+  <div class="marginAll">
 
     <div class="row-change center-v">
       <div class="column">
@@ -2576,8 +2576,8 @@
   <div class="blank-lineheight-l"></div>
 
   <!-- initial concepts -->
-  <div class="margin-all">
-    <div class="column margin-all">
+  <div class="marginAll">
+    <div class="column marginAll">
       <P class="t-title-m">PURPOSE OF THE APP </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2643,7 +2643,7 @@
   <!-- 03 -->
 
   <!-- 04 -->
-  <div class="margin-all">
+  <div class="marginAll">
     <P class="text-project-numbers color-gh">04</P>
 
     <div class="row-change center-v">
@@ -2797,7 +2797,7 @@
 
     <div class="blank-lineheight-m"></div>
 
-    <P class="t-title-m margin-all">HIGH-FIDELITY WIREFRAMES </P>
+    <P class="t-title-m marginAll">HIGH-FIDELITY WIREFRAMES </P>
 
     <div class="carouselGH">
       <div class="nav-gh nav-left-gh">
