--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
+  <div class="marginAll">
     <br>
     <br>
     <br>
