--- a/photography/index.html
+++ b/photography/index.html
@@ -94,7 +94,7 @@ Interested in what you see? Shoot me an email :) " />
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project/" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="inactive head-right-1550 box">
@@ -113,7 +113,7 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="blank-lineheight-xl"></div>
 
     <div class="body-landing">
@@ -552,7 +552,7 @@ Interested in what you see? Shoot me an email :) " />
 
 
   <!--back to top-->
-  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+  <button id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
 
     <div id="btnFont">TOP</div>
