--- a/project/alltrails/index.html
+++ b/project/alltrails/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
+  <div class="marginAll">
     <br>
     <br>
     <br>
