--- a/project/index.html
+++ b/project/index.html
@@ -118,7 +118,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="margin-all">
+  <div class="marginAll">
     <div class="blank-lineheight-xl"></div>
     <div class="body-landing">
       <div class="body-intro">
@@ -180,7 +180,7 @@
       </div>
     </div>
     <!--MEAL PLANNER-->
-    <div class="blank-lineheight-m"></div>
+    <div class="blank-lineheight-xl"></div>
     <!--GARDENERS HUB-->
     <div id="ytrigger">
       <div class="body-h">
@@ -200,7 +200,7 @@
 
     </div>
     <!--GARDENERS HUB-->
-    <div class="blank-lineheight-m"></div>
+    <div class="blank-lineheight-xl"></div>
 
     <!--ALLTRAILS-->
     <div id="ytrigger2">
@@ -223,14 +223,14 @@
       </div>
     </div>
     <!--ALLTRAILS-->
-    <div class="blank-lineheight-m"></div>
+    <div class="blank-lineheight-xl"></div>
 
   </div>
 
 
 
   <!--back to top-->
-  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+  <button id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
 
     <div>TOP</div>
