--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -93,7 +93,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project/" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="active head-right-1550 box">
@@ -111,11 +111,8 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <div class="blank-lineheight-xl"></div>
+
   <!--body-->
   <div class="marginAll">
 
@@ -135,7 +132,7 @@
       </div>
     </div>
     <!--site -->
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl">Problem Cloud
@@ -161,14 +158,14 @@
       </div>
     </div>
     <!--Problem cloud-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Problem cloud-->
     <div class="body-h">
       <div class="body-right body-txt">
         <P class="t-title-l"> PROBLEM CLOUD</P>
         <p class="horizontal-line"></p>
-        <br>
+        <div class="blank-lineheight-l"></div>
 
         <p class="t-text-m">2 images in 3 color separations and one monochrome image. Take into
           account folding as studied in the box assignment, as well as offsetting to deal with
@@ -391,8 +388,7 @@
       </div>
     </div>
     <!--Site and City4 -->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -414,8 +410,8 @@
       </div>
     </div>
     <!--site Plan-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Plan1-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -430,8 +426,8 @@
       </div>
     </div>
     <!--Plan1-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Plan2-->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -445,8 +441,8 @@
       </div>
     </div>
     <!--Plan2-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Plan3-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -461,8 +457,8 @@
       </div>
     </div>
     <!--Plan3-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Plan4-->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -476,9 +472,8 @@
       </div>
     </div>
     <!--Plan4-->
+    <div class="blank-lineheight-xl"></div>
 
-    <br>
-    <br>
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl"> Sections and Elevations
@@ -499,8 +494,8 @@
       </div>
     </div>
     <!--Elevations-->
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--Elevation1-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -515,11 +510,7 @@
       </div>
     </div>
     <!--Elevation1-->
-
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -535,7 +526,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
