--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -115,11 +115,8 @@
 
   <!--body-->
   <div class="marginAll">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -257,7 +254,7 @@
       </div>
     </div>
     <!--Site -->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Site -->
     <div class="body-h">
@@ -273,12 +270,7 @@
       </div>
     </div>
     <!--Site -->
-    <br>
-
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -294,7 +286,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
