--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -115,11 +115,8 @@
 
   <!--body-->
   <div class="marginAll">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
 
     <!--diagram 1-->
     <div class="body-h">
@@ -183,7 +180,7 @@
       </div>
     </div>
     <!--site -->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -199,16 +196,13 @@
       </div>
     </div>
     <!--site -->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl"> Photos of Sequences and Movements </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-
-
-
     <!--Section Perspective -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -233,7 +227,7 @@
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">RESEARCH TO SITE</p>
+        <p class="t-title-l">RESEARCH ON SITE</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Transform the research final result to site</p>
       </div>
@@ -244,7 +238,8 @@
       </div>
     </div>
     <!--research-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
@@ -266,7 +261,7 @@
     </div>
     <!-- content-->
 
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--programs-->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -281,7 +276,7 @@
       </div>
     </div>
     <!--programs-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--programs-->
     <div class="body-h">
@@ -297,7 +292,7 @@
       </div>
     </div>
     <!--programs-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
     <!--plan -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -312,7 +307,7 @@
       </div>
     </div>
     <!--plan -->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--render-->
     <div class="body-h">
@@ -328,10 +323,8 @@
       </div>
     </div>
     <!--render-->
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
 
 
 
@@ -347,7 +340,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button  id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
