--- a/photography/index.html
+++ b/photography/index.html
@@ -113,26 +113,25 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-  <div class="marginAll">
     <div class="blank-lineheight-xl"></div>
 
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
       </div>
-      <div class="body-intro">
+      <div class="body-intro" data-aos="fade-up">
         <div class="body-v">
-          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
+          <div class="t-hi" >I'm Vicky.</div>
         </div>
         <p class="divider"></p>
         <div class="body-v">
           <div class="body-intro">
-            <span class="t-me" id="t-me-1550">photography</span>
+            <span class="t-me">photography</span>
             <span class="divider1"></span>
-            <span class="t-me" id="t-me-1550"> nature observation </span>
+            <span class="t-me" > nature observation</span>
           </div>
-          <div class="t-me t-me-1" id="t-me-1550">
-            is one of my favorite hobby. </div>
+          <div class="t-me t-me-1">
+            is one of my favorite hobby.          </div>
         </div>
       </div>
       <p class="t-intro z-index-top">
@@ -299,7 +298,6 @@ Interested in what you see? Shoot me an email :) " />
       </div>
     </div>
 
-  </div>
   <!--Photo 7-->
   <div class="blank-lineheight-xl"></div>
 
