--- a/project/alltrails/index.html
+++ b/project/alltrails/index.html
@@ -495,7 +495,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button  id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
