--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -95,7 +95,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="active head-right-1550 box">
+      <a href="/project/" class="active head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="inactive head-right-1550 box">
@@ -234,6 +234,8 @@
     </div>
   </div>
   <!--img 1-->
+  <div class="blank-lineheight-xl"></div>
+
   <!--img 2-->
   <div class="body-h" id="ytrigger-gh2">
     <div class="body-left body-img float">
@@ -251,6 +253,8 @@
     </div>
   </div>
   <!--img 2-->
+  <div class="blank-lineheight-xl"></div>
+
   <!--Img 3-->
   <div class="body-h" id="ytrigger-gh3">
     <div class="body-left  body-txt">
@@ -264,6 +268,8 @@
     </div>
   </div>
   <!--img 3-->
+  <div class="blank-lineheight-xl"></div>
+
   <!--img 4-->
   <div class="body-h" id="ytrigger-gh4">
     <div class="body-left body-img float">
@@ -439,7 +445,7 @@
 
     <div class="row-change center-v">
       <div class="column">
-        <P class="t-title-m">Gardeners’ pain points</P>
+        <P class="t-title-m">Gardeners&#8217; pain points</P>
         <p class="t-text-m">&#183; What is the major problem to plant their own food? </p>
         <p class="t-text-m">&#183; How they maintain the garden and use what method? </p>
       </div>
@@ -2899,7 +2905,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
