--- a/project/index.html
+++ b/project/index.html
@@ -118,114 +118,111 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
-    <div class="blank-lineheight-xl"></div>
-    <div class="body-landing">
-      <div class="body-intro">
-        <div class="t-hello" id="t-hello-1550">HELLO, </div>
-      </div>
-      <div class="body-intro" data-aos="fade-up">
-        <div class="body-v">
-          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
-        </div>
-        <p class="divider"></p>
-        <div class="body-v">
-          <div class="body-intro">
-            <span class="t-me" id="t-me-1550">a designer</span>
-            <span class="divider1"></span>
-            <span class="t-me" id="t-me-1550"> problem solver. </span>
-          </div>
-          <div class="t-me t-me-1" id="t-me-1550">
-            based in the San Francisco Bay Area.
-          </div>
-        </div>
-      </div>
-
-      <div class="t-intro z-index-top" data-aos="fade-up">
-        Passionate about translating complex business requirements into compelling user
-        experiences. While my focus is primarily on design, I don't mind occasionally writing code
-        when the need arises.</div>
+  <div class="blank-lineheight-xl"></div>
+  <div class="body-landing">
+    <div class="body-intro">
+      <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
-    <div class="blank-lineheight-m"></div>
+    <div class="body-intro" data-aos="fade-up">
+      <div class="body-v">
+        <div class="t-hi">I'm Vicky.</div>
+      </div>
+      <p class="divider"></p>
+      <div class="body-v">
+        <div class="body-intro">
+          <span class="t-me">product</span>
+          <span class="divider1"></span>
+          <span class="t-me"> design</span>
+
+        </div>
+        <div class="t-me t-me-1">
+          most recent design projects </div>
+      </div>
+    </div>
+
+    <div class="t-intro z-index-top" data-aos="fade-up">
+      Some of the apps I have designed recently, I built this website myself from scratch using
+      HTML/CSS/JS deployed on AWS.</div>
+  </div>
+  <div class="blank-lineheight-m"></div>
 
 
 
-    <!--body-->
+  <!--body-->
+  <div class="body-h">
+    <p class="vertical-line ver1"></p>
+  </div>
+  <!-- content-->
+  <div class="row marginInner item-height-m center-v">
+    <p class="t-text-l"> Selected Projects </p>
+    <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+
+  <!--MEAL PLANNER-->
+  <div id="ytrigger1">
+
     <div class="body-h">
-      <p class="vertical-line ver1"></p>
-    </div>
+      <div class="body-right body-txt marginAll">
+        <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
+        <p class="horizontal-line"></p>
 
-    <!-- content-->
-    <div class="content-tl">
-      <p class="t-text-l"> Selected Projects </p>
-      <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-    <!--MEAL PLANNER-->
-    <div id="ytrigger1">
-
-      <div class="body-h">
-        <div class="body-right  body-txt">
-          <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
-          <p class="horizontal-line"></p>
-
-          <p class="t-text-m">A mobile app helps planning a healthy meal</p>
-          <p class="t-text-m">May 2021 - August 2021</p>
-        </div>
-        <div class="body-left body-img float">
-          <a href="/project/meal_planner">
-            <img src="../layout_mealplanner.png" alt="Meal Planner">
-          </a>
-        </div>
+        <p class="t-text-m">A mobile app helps planning a healthy meal</p>
+        <p class="t-text-m">May 2021 - August 2021</p>
+      </div>
+      <div class="body-left  float">
+        <a href="/project/meal_planner">
+          <img src="../layout_mealplanner.png" alt="Meal Planner">
+        </a>
       </div>
     </div>
-    <!--MEAL PLANNER-->
-    <div class="blank-lineheight-xl"></div>
-    <!--GARDENERS HUB-->
-    <div id="ytrigger">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a href="/project/gardeners_hub">
-            <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
-          </a>
-        </div>
-
-        <div class="body-right body-txt">
-          <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">A marketplace for local community</p>
-          <p class="t-text-m">May 2021 - August 2021</p>
-        </div>
+  </div>
+  <!--MEAL PLANNER-->
+  <div class="blank-lineheight-xl"></div>
+  <!--GARDENERS HUB-->
+  <div id="ytrigger">
+    <div class="body-h">
+      <div class="body-left float">
+        <a href="/project/gardeners_hub">
+          <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
+        </a>
       </div>
 
-    </div>
-    <!--GARDENERS HUB-->
-    <div class="blank-lineheight-xl"></div>
-
-    <!--ALLTRAILS-->
-    <div id="ytrigger2">
-
-      <div class="body-h">
-
-        <div class="body-left body-img float">
-          <p href="/alltrails">
-            <img class="width-l" src="../layout_alltrails.jpg" alt="Redesign AllTrails">
-          </p>
-        </div>
-        <div class="vertical-line-blank"></div>
-
-        <div class="body-right body-txt">
-          <p href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</p>
-          <p class="horizontal-line"></p>
-
-          <p class="t-text-m">Coming Soon</p>
-        </div>
+      <div class="body-right body-txt marginAll">
+        <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">A marketplace for local community</p>
+        <p class="t-text-m">May 2021 - August 2021</p>
       </div>
     </div>
-    <!--ALLTRAILS-->
-    <div class="blank-lineheight-xl"></div>
 
   </div>
+  <!--GARDENERS HUB-->
+  <div class="blank-lineheight-xl"></div>
+
+  <!--ALLTRAILS-->
+  <div id="ytrigger2">
+
+    <div class="body-h">
+
+      <div class="body-left float">
+        <p href="/alltrails">
+          <img class="width-l" src="../layout_alltrails.jpg" alt="Redesign AllTrails">
+        </p>
+      </div>
+      <div class="vertical-line-blank"></div>
+
+      <div class="body-right body-txt marginAll">
+        <p href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</p>
+        <p class="horizontal-line"></p>
+
+        <p class="t-text-m">Coming Soon</p>
+      </div>
+    </div>
+  </div>
+  <!--ALLTRAILS-->
+  <div class="blank-lineheight-xl"></div>
+
 
 
 
