--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -139,21 +139,21 @@
   <!--about mealplanner-->
 
   <div class=" bg-color-mp-noheight">
+
     <!-- content-->
-    <div class="marginAll">
-      <div class="content-tl adding-margintop">
-        <p class="t-text-l"> Final Product </p>
-        <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-      </div>
+    <div class="row marginInner item-height-m center-v">
+      <p class="t-text-l"> Final Product </p>
+      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--final product 1-->
     <div class="body-h">
       <div class="body-left float">
         <img src="feature_01.png" alt="Recipe Generator" class="width-xxl">
       </div>
 
-      <div class="body-right body-txt marginAll">
+      <div class="body-right body-txt marginInner">
         <p class="t-title-l" data-aos="fade-up">Cooking Recipe Generator</p>
         <p class="horizontal-line"></p>
         <div class="blank-lineheight-xs"></div>
@@ -181,7 +181,7 @@
     <br>
     <!--final product 2-->
     <div class="body-h">
-      <div class="body-right  body-txt marginAll">
+      <div class="body-right  body-txt marginInner">
         <p class="t-title-l" data-aos="fade-up">Grocery Shopping List Provider</p>
         <p class="horizontal-line"></p>
         <div class="blank-lineheight-xs"></div>
@@ -216,7 +216,7 @@
         <img src="feature_03.png" alt="Recipe Generator" class="width-xxl">
       </div>
 
-      <div class="body-right body-txt marginAll">
+      <div class="body-right body-txt marginInner">
         <p class="t-title-l" data-aos="fade-up">Pantry and Cookware</p>
         <p class="horizontal-line"></p>
         <div class="blank-lineheight-xs"></div>
@@ -243,15 +243,14 @@
     <!--final product 3-->
 
 
-    <div class="column ">
+    <div class="column">
       <!-- content-->
-      <div class="marginAll">
-        <div class="content-tl adding-margintop">
-          <p class="t-text-l"> Features </p>
-          <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-        </div>
+      <div class="row marginInner item-height-m center-v">
+        <p class="t-text-l"> Features </p>
+        <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
       </div>
       <!-- content-->
+
       <div class="row center-h">
         <div
           class="row width-l item-height-m color-grey border-radius float center-v border-color-left">
@@ -389,12 +388,11 @@
 
   </div>
   <div class="bg-color-mp-noheight1">
+
     <!-- content-->
-    <div class="marginAll">
-      <div class="content-tl ">
-        <p class="t-text-l"> Final Product </p>
-        <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-      </div>
+    <div class="row marginInner item-height-m center-v">
+      <p class="t-text-l"> Final Product </p>
+      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <div class="MPcarousel">
@@ -518,13 +516,15 @@
 
 
   <!-- content-->
+  <div class="row marginInner item-height-m center-v">
+    <p class="t-text-l"> Case Study </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+  
+  <!--Problem and solution-->
+
   <div class="marginAll">
-    <div class="content-tl">
-      <p class="t-text-l"> Case Study</p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-    <!--Problem and solution-->
     <div class="row-change align-top">
 
       <div class="column width-xxl">
@@ -1173,7 +1173,7 @@
     <P class="text-project-numbers color-mp">03</P>
 
     <div class="row-change center-v">
-      <div class="column">
+      <div class="column">Î
         <P class="t-title-l">IDEATION</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m"> Ideation is the most exciting stage, based on my previous study of
@@ -1971,8 +1971,8 @@
     <br>
   </div>
 
-  <div class="bg-color-mp">
-    <div class="blank-lineheight-xl"></div>
+  <div class="bg-color-mp-noheight">
+    <div class="blank-lineheight-l"></div>
     <div class="MPcarousel">
       <div class="MPnav MPnav-left hfLeft1">
       </div>
@@ -2091,7 +2091,7 @@
 </body>
 
 <!--back to top-->
-<button  id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
