--- a/architecture/index.html
+++ b/architecture/index.html
@@ -115,236 +115,239 @@
   <!--head-->
   <!--body-->
 
-  <div class="marginAll">
-    <div class="blank-lineheight-xl"></div>
+  <div class="blank-lineheight-xl"></div>
 
-    <div class="body-landing">
-      <div class="body-intro">
-        <div class="t-hello" id="t-hello-1550">HELLO, </div>
-      </div>
-      <div class="body-intro">
-        <div class="body-v">
-          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
-        </div>
-        <p class="divider"></p>
-        <div class="body-v">
-          <div class="t-me t-me-1" id="t-me-1550">
-            selected academic projects </div>
-          <div class="body-intro">
-
-            <span class="t-me" id="t-me-1550">architecture</span>
-            <span class="divider1"></span>
-            <span class="t-me" id="t-me-1550"> design </span>
-          </div>
-
-        </div>
-      </div>
-      <p class="t-intro z-index-top">
-        Most of the projects are from my three-year Master of Architecture program. Our main focuses
-        were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
-        material, tectonic, social, technological, and environmental determinants of building form.
-        the penultimate studio incorporate integrative thinking that shapes complex architectural
-        design and technical solutions based on design research and studio requirements.</p>
+  <div class="body-landing">
+    <div class="body-intro">
+      <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
-
-
-
-
-
-
-
-
-    <div class="body-h">
-      <p class="vertical-line ver1"></p>
-    </div>
-
-    <!--architecture 1-->
-    <div id="ytrigger-arch">
-      <div class="body-h" id="ytrigger-arch">
-        <div class="body-left body-img float">
-          <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
-
+    <div class="body-intro" data-aos="fade-up">
+      <div class="body-v">
+        <div class="t-hi">I'm Vicky.</div>
+      </div>
+      <p class="divider"></p>
+      <div class="body-v">
+        <div class="body-intro">
+          <span class="t-me">selected academic projects
+          </span>
         </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./recreation_commons">
-            RECREATION COMMONS </a>
-          </p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
-          <p class="t-text-m">Instructor: Roddy Creedon</p>
-          <p class="t-text-m">Duration: One Semester</p>
 
-          <p class="t-text-m">Site: 110 Franklin St. San Francisco, CA, 94102</p>
-          <p class="t-text-m">Total Floor Area: 22900 s.f. 4 Floors</p>
+        <div class="row">
+          <span class="t-me"> architecture </span>
+          <span class="divider1"></span>
+          <div class="t-me t-me-1"> design </div>
         </div>
+
       </div>
     </div>
-
-    <!--architecture 1-->
-    <div class="blank-lineheight-xl"></div>
-
-    <!--architecture 2-->
-    <div id="ytrigger-arch2">
-      <div class="body-h">
-        <div class="body-left body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
-          <p class="t-text-m">Duration: Six Weeks </p>
-          <p class="t-text-m">Site: Location: Hyde Park, London </p>
-          <p class="t-text-m">7500 square metres approx. </p>
-          <p class="t-text-m">Maximum Built Area: 4000 square metres </p>
-        </div>
-
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
-        </div>
-      </div>
-    </div>
-    <!--architecture 2-->
-    <div class="blank-lineheight-xl"></div>
-    <!--THESIS -->
-    <div id="ytrigger-arch3">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a href="./thesis_studio/"><img src="./ar_07.jpg"></a>
-
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF
-            OBJECTS
-          </a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
-          <p class="t-text-m">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
-          <p class="t-text-m">Duration: Two Semesters</p>
-        </div>
-      </div>
-    </div>
-    <!--THESIS -->
-    <div class="blank-lineheight-xl"></div>
-    <!--MANIFOLD GROUND -->
-      <div class="body-h" id="ytrigger-arch4">
-        <div class="body-left body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
-          <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
-          <p class="t-text-m">Instructor: Keith Plymale </p>
-          <p class="t-text-m">Duration: One Semester</p>
-          <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
-        </div>
-      </div>
-    <!--MANIFOLD GROUND -->
-    <div class="blank-lineheight-xl"></div>
-
-    <!--architecture 3-->
-    <div id="ytrigger-arch5">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">Introduction to Architecture Studio 2, Spring 2016 </p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text-m">Instructor: Jay Atherton </p>
-          <p class="t-text-m">Duration: One Semester</p>
-          <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
-          </p>
-        </div>
-      </div>
-    </div>
-    <!--architecture 3-->
-    <div class="blank-lineheight-xl"></div>
-    <!--CURVES-->
-    <div id="ytrigger-arch6">
-      <div class="body-h">
-        <div class="body-left body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">Introduction to Architecture Studio 1, Fall 2015 </p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text-m">Instructor: Rudabeh Pakravan </p>
-          <p class="t-text-m">Duration: One Semester</p>
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <a class="t-title-l" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
-        </div>
-      </div>
-    </div>
-    <!--CURVES-->
-    <div class="blank-lineheight-xl"></div>
-    <!--LACMA-->
-    <div id="ytrigger-arch7">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a class="t-title-l" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
-          <p class="t-text-m">Instructor: Mark Anderson</p>
-          <p class="t-text-m">Duration: One Semester</p>
-        </div>
-      </div>
-    </div>
-    <!-- LACMA-->
-    <div class="blank-lineheight-xl"></div>
-
-
-
-    <!--architecture 6-->
-    <div id="ytrigger-arch8">
-      <div class="body-h">
-        <div class="body-left body-txt">
-          <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text-m">Instructor: Yung Ho Chang </p>
-          <p class="t-text-m">Duration: One Semester, One Unit</p>
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <img src="./ar_06.jpg">
-        </div>
-      </div>
-    </div>
-
-    <!--architecture 6-->
-    <div class="blank-lineheight-xl"></div>
-
-
-
-
-
-
-
-
+    <p class="t-intro z-index-top">
+      Most of the projects are from my three-year Master of Architecture program. Our main focuses
+      were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
+      material, tectonic, social, technological, and environmental determinants of building form.
+      the penultimate studio incorporate integrative thinking that shapes complex architectural
+      design and technical solutions based on design research and studio requirements.</p>
   </div>
+
+
+
+
+
+
+
+
+  <div class="body-h">
+    <p class="vertical-line ver1"></p>
+  </div>
+
+  <!--architecture 1-->
+  <div id="ytrigger-arch">
+    <div class="body-h" id="ytrigger-arch">
+      <div class="body-left body-img float">
+        <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./recreation_commons">
+          RECREATION COMMONS </a>
+        </p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
+        <p class="t-text-m">Instructor: Roddy Creedon</p>
+        <p class="t-text-m">Duration: One Semester</p>
+
+        <p class="t-text-m">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+        <p class="t-text-m">Total Floor Area: 22900 s.f. 4 Floors</p>
+      </div>
+    </div>
+  </div>
+
+  <!--architecture 1-->
+  <div class="blank-lineheight-xl"></div>
+
+  <!--architecture 2-->
+  <div id="ytrigger-arch2">
+    <div class="body-h">
+      <div class="body-left body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+        <p class="t-text-m">Duration: Six Weeks </p>
+        <p class="t-text-m">Site: Location: Hyde Park, London </p>
+        <p class="t-text-m">7500 square metres approx. </p>
+        <p class="t-text-m">Maximum Built Area: 4000 square metres </p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
+      </div>
+    </div>
+  </div>
+  <!--architecture 2-->
+  <div class="blank-lineheight-xl"></div>
+  <!--THESIS -->
+  <div id="ytrigger-arch3">
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a href="./thesis_studio/"><img src="./ar_07.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED
+          CONTINUITY OF
+          OBJECTS
+        </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
+        <p class="t-text-m">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
+        <p class="t-text-m">Duration: Two Semesters</p>
+      </div>
+    </div>
+  </div>
+  <!--THESIS -->
+  <div class="blank-lineheight-xl"></div>
+  <!--MANIFOLD GROUND -->
+  <div class="body-h" id="ytrigger-arch4">
+    <div class="body-left body-txt">
+      <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
+      <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
+      <p class="t-text-m">Instructor: Keith Plymale </p>
+      <p class="t-text-m">Duration: One Semester</p>
+      <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+    </div>
+    <div class="vertical-line-blank">
+    </div>
+    <div class="body-right body-img float">
+      <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
+    </div>
+  </div>
+  <!--MANIFOLD GROUND -->
+  <div class="blank-lineheight-xl"></div>
+
+  <!--architecture 3-->
+  <div id="ytrigger-arch5">
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF
+          RIVER EDGES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">Introduction to Architecture Studio 2, Spring 2016 </p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text-m">Instructor: Jay Atherton </p>
+        <p class="t-text-m">Duration: One Semester</p>
+        <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        </p>
+      </div>
+    </div>
+  </div>
+  <!--architecture 3-->
+  <div class="blank-lineheight-xl"></div>
+  <!--CURVES-->
+  <div id="ytrigger-arch6">
+    <div class="body-h">
+      <div class="body-left body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
+          CURVES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">Introduction to Architecture Studio 1, Fall 2015 </p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text-m">Instructor: Rudabeh Pakravan </p>
+        <p class="t-text-m">Duration: One Semester</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a class="t-title-l" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
+      </div>
+    </div>
+  </div>
+  <!--CURVES-->
+  <div class="blank-lineheight-xl"></div>
+  <!--LACMA-->
+  <div id="ytrigger-arch7">
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title-l" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+        <p class="t-text-m">Instructor: Mark Anderson</p>
+        <p class="t-text-m">Duration: One Semester</p>
+      </div>
+    </div>
+  </div>
+  <!-- LACMA-->
+  <div class="blank-lineheight-xl"></div>
+
+
+
+  <!--architecture 6-->
+  <div id="ytrigger-arch8">
+    <div class="body-h">
+      <div class="body-left body-txt">
+        <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text-m">Instructor: Yung Ho Chang </p>
+        <p class="t-text-m">Duration: One Semester, One Unit</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./ar_06.jpg">
+      </div>
+    </div>
+  </div>
+
+  <!--architecture 6-->
+  <div class="blank-lineheight-xl"></div>
+
+
+
+
+
+
+
+
   <!--body-->
 
 
