--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -93,7 +93,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project/" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="active head-right-1550 box">
@@ -115,11 +115,8 @@
 
   <!--body-->
   <div class="marginAll">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-l"></div>
+
     <!--site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -136,7 +133,7 @@
 
     </div>
     <!--site -->
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl">PART 1 THE ISLAND
@@ -157,7 +154,7 @@
       </div>
     </div>
     <!--geometry-->
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!--geometry-->
     <div class="body-h">
       <div class="body-right body-txt">
@@ -179,7 +176,7 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <br>
+    <div class="blank-lineheight-l"></div>
 
     <!--density-->
     <div class="body-h">
@@ -212,7 +209,7 @@
       </div>
     </div>
     <!--site -->
-    <br>
+    <div class="blank-lineheight-l"></div>
 
 
 
@@ -287,7 +284,7 @@
       </div>
     </div>
     <!--Site -->
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -318,7 +315,7 @@
       </div>
     </div>
     <!--Site -->
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -333,10 +330,7 @@
       </div>
     </div>
     <!--Site -->
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-Xl"></div>
 
 
 
@@ -352,7 +346,7 @@
 
 
 <!--back to top-->
-<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+<button  id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
